src/objects/Campus_Engagement_Tactic__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campus Engagement Tactic</relationshipLabel>
        <relationshipName>Campus_Engagement_Tactic</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ambassador_Program_Stage__c</fullName>
        <label>Ambassador Program Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Program Inquiry</fullName>
                </value>
                <value>
                    <fullName>Pending Decision</fullName>
                </value>
                <value>
                    <fullName>Recruiting/Planning</fullName>
                </value>
                <value>
                    <fullName>Ambassador Training in Progress</fullName>
                </value>
                <value>
                    <fullName>Certification in Progress</fullName>
                </value>
                <value>
                    <fullName>Active Program</fullName>
                </value>
                <value>
                    <fullName>Stagnant Activity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ambassador_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A check in this field means that the customer has an Ambassador Program for SALT.</inlineHelpText>
        <label>Ambassador Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campus_Event_Activations__c</fullName>
        <label>Campus Event Activations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campus_Event_Cost__c</fullName>
        <label>Campus Event Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campus_Event_Date__c</fullName>
        <label>Campus Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <label>Office</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academic Advising</fullName>
                </value>
                <value>
                    <fullName>Academic Affairs</fullName>
                </value>
                <value>
                    <fullName>Admissions</fullName>
                </value>
                <value>
                    <fullName>Alumni Relations</fullName>
                </value>
                <value>
                    <fullName>Athletics</fullName>
                </value>
                <value>
                    <fullName>Bursar</fullName>
                </value>
                <value>
                    <fullName>Business Office</fullName>
                </value>
                <value>
                    <fullName>Campus-Wide</fullName>
                </value>
                <value>
                    <fullName>Career Services</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Enrollment Management</fullName>
                </value>
                <value>
                    <fullName>Faculty</fullName>
                </value>
                <value>
                    <fullName>Financial Aid</fullName>
                </value>
                <value>
                    <fullName>First-Year Experience</fullName>
                </value>
                <value>
                    <fullName>Institutional Research</fullName>
                </value>
                <value>
                    <fullName>Orientation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>President&apos;s Office</fullName>
                </value>
                <value>
                    <fullName>Registrar</fullName>
                </value>
                <value>
                    <fullName>Residence Life</fullName>
                </value>
                <value>
                    <fullName>Retention Office</fullName>
                </value>
                <value>
                    <fullName>Scholarship Office</fullName>
                </value>
                <value>
                    <fullName>Student Activities</fullName>
                </value>
                <value>
                    <fullName>Student Affairs</fullName>
                </value>
                <value>
                    <fullName>Student Government</fullName>
                </value>
                <value>
                    <fullName>Student Leadership Programming</fullName>
                </value>
                <value>
                    <fullName>Student Services</fullName>
                </value>
                <value>
                    <fullName>TRIO Program</fullName>
                </value>
                <value>
                    <fullName>Veterans Affairs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pilot_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a pilot program?</description>
        <inlineHelpText>Is this a pilot program?</inlineHelpText>
        <label>Pilot Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promotional_Asset__c</fullName>
        <label>Promotional Asset</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amabassador Handbook</fullName>
                </value>
                <value>
                    <fullName>Banner</fullName>
                </value>
                <value>
                    <fullName>Buckslip</fullName>
                </value>
                <value>
                    <fullName>Bulletin Board Kit</fullName>
                </value>
                <value>
                    <fullName>Communication Kit</fullName>
                </value>
                <value>
                    <fullName>Digital board presentation</fullName>
                </value>
                <value>
                    <fullName>Event Resources</fullName>
                </value>
                <value>
                    <fullName>Flyer</fullName>
                </value>
                <value>
                    <fullName>Guide for Student Organizations</fullName>
                </value>
                <value>
                    <fullName>Instructor’s Handbook</fullName>
                </value>
                <value>
                    <fullName>Membership Card</fullName>
                </value>
                <value>
                    <fullName>Orientation Kit</fullName>
                </value>
                <value>
                    <fullName>Poster</fullName>
                </value>
                <value>
                    <fullName>Press Kit</fullName>
                </value>
                <value>
                    <fullName>Print Ad</fullName>
                </value>
                <value>
                    <fullName>SALT Flyer</fullName>
                </value>
                <value>
                    <fullName>SALT Overview Video</fullName>
                </value>
                <value>
                    <fullName>Slide Deck</fullName>
                </value>
                <value>
                    <fullName>Table Tent</fullName>
                </value>
                <value>
                    <fullName>Web Ad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consultation Call</fullName>
                </value>
                <value>
                    <fullName>Stakeholder Meeting</fullName>
                </value>
                <value>
                    <fullName>Post-Launch Call</fullName>
                </value>
                <value>
                    <fullName>Quarterly Check-In-Call</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tactic_Category__c</fullName>
        <label>Tactic Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Core promotional initiatives</fullName>
                </value>
                <value>
                    <fullName>Incorporate SALT into existing campus events/programming</fullName>
                </value>
                <value>
                    <fullName>Multi-department engagement plan</fullName>
                </value>
                <value>
                    <fullName>Adopted ongoing communication/promotional plan</fullName>
                </value>
                <value>
                    <fullName>SALT registration requirement</fullName>
                </value>
                <value>
                    <fullName>Utilization of instructor handbook</fullName>
                </value>
                <value>
                    <fullName>SALT ambassador program</fullName>
                </value>
                <value>
                    <fullName>Integration into the curriculum</fullName>
                </value>
                <value>
                    <fullName>SALT steering committee/task force</fullName>
                </value>
                <value>
                    <fullName>SALT incentive event/raffle</fullName>
                </value>
                <value>
                    <fullName>Top down buy-in (President/C-Suite)</fullName>
                </value>
                <value>
                    <fullName>SALT Courses/Lesson requirement</fullName>
                </value>
                <value>
                    <fullName>Engagement Meeting</fullName>
                </value>
                <value>
                    <fullName>Re-Engagement Meeting</fullName>
                </value>
                <value>
                    <fullName>Large-Scale Engagement Initiative</fullName>
                </value>
                <value>
                    <fullName>One-on-One Counseling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Alumni</fullName>
                </value>
                <value>
                    <fullName>All Students</fullName>
                </value>
                <value>
                    <fullName>Faculty and Administrators</fullName>
                </value>
                <value>
                    <fullName>First-Year Student</fullName>
                </value>
                <value>
                    <fullName>Graduating Student</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Student Leaders</fullName>
                </value>
                <value>
                    <fullName>TRIO</fullName>
                </value>
                <value>
                    <fullName>Young Alumni</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Frame__c</fullName>
        <label>Time Frame</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spring 2012</fullName>
                </value>
                <value>
                    <fullName>Summer 2012</fullName>
                </value>
                <value>
                    <fullName>Fall 2012</fullName>
                </value>
                <value>
                    <fullName>Spring 2013</fullName>
                </value>
                <value>
                    <fullName>Summer 2013</fullName>
                </value>
                <value>
                    <fullName>Fall 2013</fullName>
                </value>
                <value>
                    <fullName>Spring 2014</fullName>
                </value>
                <value>
                    <fullName>Summer 2014</fullName>
                </value>
                <value>
                    <fullName>Fall 2014</fullName>
                </value>
                <value>
                    <fullName>Spring 2015</fullName>
                </value>
                <value>
                    <fullName>Summer 2015</fullName>
                </value>
                <value>
                    <fullName>Fall 2015</fullName>
                </value>
                <value>
                    <fullName>Spring 2016</fullName>
                </value>
                <value>
                    <fullName>Summer 2016</fullName>
                </value>
                <value>
                    <fullName>Fall 2016</fullName>
                </value>
                <value>
                    <fullName>Spring 2017</fullName>
                </value>
                <value>
                    <fullName>Summer 2017</fullName>
                </value>
                <value>
                    <fullName>Fall 2017</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Campus Engagement Tactic</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Time_Frame__c</columns>
        <columns>Tactic_Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Daryl_Conte</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Source__c</columns>
        <columns>Time_Frame__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Daryl</value>
        </filters>
        <label>Daryl Conte</label>
    </listViews>
    <listViews>
        <fullName>New_View</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Time_Frame__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>New View</label>
    </listViews>
    <nameField>
        <label>Campus Engagement Tactic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campus Engagement Tactic</pluralLabel>
    <recordTypes>
        <fullName>campus_engagenement_tactic</fullName>
        <active>true</active>
        <label>Campus Engagement Tactic</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>